--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,6 +35,8 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GO111MODULE: "on"
+      RELEASE_VERSION: ${GITHUB_REF##*/}
+    run: echo RELEASE_VERSION
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v1
@@ -45,6 +47,7 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF##*/}"
 
       - name: Build
+        if:
         run: |-
           GOOS=windows GOARCH=386 VERSION=${GITHUB_REF##*/:-dev} make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
@@ -60,6 +63,7 @@ jobs:
 #          ls -l build/dnsproxy-*
 
 #      - name: Create release
+#        if: startsWith(github.ref, 'refs/tags/v')
 #        id: create_release
 #        uses: actions/create-release@v1
 #        env:
@@ -71,6 +75,7 @@ jobs:
 #          prerelease: false
 #
 #      - name: Upload
+#        if: startsWith(github.ref, 'refs/tags/v')
 #        uses: xresloader/upload-to-github-release@v1
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
