--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,7 @@ jobs:
     env:
       GO111MODULE: "on"
       RELEASE_VERSION: ${GITHUB_REF##*/}
-    run: echo RELEASE_VERSION
+    run: echo $RELEASE_VERSION
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v1
