--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,7 +36,6 @@ jobs:
     env:
       GO111MODULE: "on"
       RELEASE_VERSION: ${GITHUB_REF##*/}
-    run: echo $RELEASE_VERSION
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-go@v1
@@ -44,7 +43,9 @@ jobs:
           go-version: 1.14.x
 
       - name: Show release
-        run: echo "RELEASE_VERSION=${GITHUB_REF##*/}"
+        run: |-
+          echo "RELEASE_VERSION=${GITHUB_REF##*/}"
+          echo $RELEASE_VERSION
 
       - name: Build
         if:
