--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,6 +44,7 @@ jobs:
       - name: Show release
         run: |-
           echo "RELEASE_VERSION=${GITHUB_REF##*/}"
+          echo $RELEASE_VERSION
 
       - name: Build
         if:
