--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,14 +41,13 @@ jobs:
         with:
           go-version: 1.14.x
 
-      - name: Show release
-        run: |-
-          echo "RELEASE_VERSION=${GITHUB_REF##*/}"
-          echo $RELEASE_VERSION
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Build
         if:
         run: |-
+          echo $RELEASE_VERSION
           GOOS=windows GOARCH=386 VERSION=${GITHUB_REF##*/:-dev} make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=windows GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
