--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,17 +44,11 @@ jobs:
       - name: Set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
-      - name: print
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
-
-
-      - name: Build
-        if:
+      - name: Build dev
+        if: ${{ env.RELEASE_VERSION }} != v*
         run: |-
           echo $RELEASE_VERSION
-          GOOS=windows GOARCH=386 VERSION=${GITHUB_REF##*/:-dev} make release
+          GOOS=windows GOARCH=386 VERSION=-dev make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=windows GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
@@ -66,6 +60,10 @@ jobs:
 #          GOOS=freebsd GOARCH=arm GOARM=6 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=darwin GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
 #          ls -l build/dnsproxy-*
+      - name: Build tag
+        if: ${{ env.RELEASE_VERSION }} == v*
+        run: |
+          GOOS=windows GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 
 #      - name: Create release
 #        if: startsWith(github.ref, 'refs/tags/v')
