--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,14 +41,15 @@ jobs:
         with:
           go-version: 1.14.x
 
-      - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+#      - name: Set env
+#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - name: Build dev
-        if: ${{ env.RELEASE_VERSION }} != v*
+#        if: ${{ env.RELEASE_VERSION }} != v*
         run: |-
-          echo $RELEASE_VERSION
-          GOOS=windows GOARCH=386 VERSION=-dev make release
+          export RELEASE="${GITHUB_REF##*/}"
+          echo $RELEASE
+#          GOOS=windows GOARCH=386 VERSION=${RELEASE:-dev}dev make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=windows GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
@@ -60,10 +61,10 @@ jobs:
 #          GOOS=freebsd GOARCH=arm GOARM=6 VERSION=${GITHUB_REF#refs/*/} make release
 #          GOOS=darwin GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
 #          ls -l build/dnsproxy-*
-      - name: Build tag
-        if: ${{ env.RELEASE_VERSION }} == v*
-        run: |
-          GOOS=windows GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
+#      - name: Build tag
+#        if: ${{ env.RELEASE_VERSION }} == v*
+#        run: |
+#          GOOS=windows GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 
 #      - name: Create release
 #        if: startsWith(github.ref, 'refs/tags/v')
