--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,7 +49,7 @@ jobs:
         run: |-
           RELEASE_VERSION="${GITHUB_REF##*/}"
           if $RELEASE_VERSION != v*
-          else
+          then
           $RELEASE_VERSION = ''
           GOOS=windows GOARCH=386 VERSION=${RELEASE:-dev}dev make release
 #          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
