--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,17 +14,20 @@ jobs:
 #          - windows-latest
 ##          - macos-latest because it fails
 #          - ubuntu-latest
+#
 #    steps:
 #      - uses: actions/checkout@master
+#
 #      - uses: actions/setup-go@v1
 #        with:
 #          go-version: 1.14.x
+#
 #      - name: tests
 #        run: go test -mod=vendor -race -v -bench=. -coverprofile=coverage.txt -covermode=atomic ./...
 #
 #      - name: Upload coverage
 #        uses: codecov/codecov-action@v1
-#        if: "success() && matrix.os == ubuntu-latest"
+#        if: "success() && matrix.os == 'ubuntu-latest'"
 #        with:
 #          token: ${{ secrets.CODECOV_TOKEN }}
 #          file: ./coverage.txt
@@ -37,37 +40,31 @@ jobs:
       GO111MODULE: "on"
     steps:
       - uses: actions/checkout@master
+
       - uses: actions/setup-go@v1
         with:
           go-version: 1.14.x
 
-#      - name: Set env
-#        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-
       - name: Build dev
-#        if: ${{ env.RELEASE_VERSION }} != v*
         run: |-
           RELEASE_VERSION="${GITHUB_REF##*/}"
-          if $RELEASE_VERSION != v*
+          if
+          [[ "$RELEASE_VERSION" != "v*" ]]
           then
-          RELEASE_VERSION = ''
+          RELEASE_VERSION=''
           fi
           GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION:-dev}dev make release
-#          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=windows GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=arm64 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=arm GOARM=6 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=mips GOMIPS=softfloat VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=linux GOARCH=mipsle GOMIPS=softfloat VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=freebsd GOARCH=arm GOARM=6 VERSION=${GITHUB_REF#refs/*/} make release
-#          GOOS=darwin GOARCH=amd64 VERSION=${GITHUB_REF#refs/*/} make release
+#          GOOS=linux GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=amd64 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=arm64 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=arm GOARM=6 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=mips GOMIPS=softfloat VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=linux GOARCH=mipsle GOMIPS=softfloat VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=freebsd GOARCH=arm GOARM=6 VERSION=${RELEASE_VERSION:-dev} make release
+#          GOOS=darwin GOARCH=amd64 VERSION=${RELEASE_VERSION:-dev} make release
 #          ls -l build/dnsproxy-*
-#      - name: Build tag
-#        if: ${{ env.RELEASE_VERSION }} == v*
-#        run: |
-#          GOOS=windows GOARCH=386 VERSION=${GITHUB_REF#refs/*/} make release
 
 #      - name: Create release
 #        if: startsWith(github.ref, 'refs/tags/v')
@@ -94,7 +91,6 @@ jobs:
 #  notify:
 #    needs:
 #      - build
-
 #    if:
 #      ${{ always() &&
 #        (
@@ -106,6 +102,7 @@ jobs:
 #    steps:
 #      - name: Conclusion
 #        uses: technote-space/workflow-conclusion-action@v1
+#
 #      - name: Send Slack notif
 #        uses: 8398a7/action-slack@v3
 #        with:
