--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,8 +53,8 @@ jobs:
           then
           RELEASE_VERSION=''
           fi
-          GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION:-dev}dev make release
-#          GOOS=linux GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
+          GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
+          GOOS=linux GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
 #          GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION:-dev} make release
 #          GOOS=linux GOARCH=386 VERSION=${RELEASE_VERSION:-dev} make release
 #          GOOS=linux GOARCH=amd64 VERSION=${RELEASE_VERSION:-dev} make release
