--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -54,8 +54,8 @@ jobs:
           echo "${RELEASE_VERSION}"
 
       # Win
-      - run: GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION} make release
-      - run: GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
+#      - run: GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION} make release
+#      - run: GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
 
 #      # MacOS
 #      - run: GOOS=darwin GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
@@ -80,29 +80,29 @@ jobs:
 #      - run: GOOS=freebsd GOARCH=arm GOARM=6 VERSION=${RELEASE_VERSION} make release
 #      - run: GOOS=freebsd GOARCH=arm64 VERSION=${RELEASE_VERSION} make release
 
-      - run: ls -l build/dnsproxy-*
-
-      - name: Create release
-        if: startsWith(github.ref, 'refs/tags/v')
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: xresloader/upload-to-github-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          file: "build/dnsproxy-*.tar.gz;build/dnsproxy-*.zip"
-          tags: true
-          draft: false
+#      - run: ls -l build/dnsproxy-*
+#
+#      - name: Create release
+#        if: startsWith(github.ref, 'refs/tags/v')
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ github.ref }}
+#          release_name: Release ${{ github.ref }}
+#          draft: false
+#          prerelease: false
+#
+#      - name: Upload
+#        if: startsWith(github.ref, 'refs/tags/v')
+#        uses: xresloader/upload-to-github-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          file: "build/dnsproxy-*.tar.gz;build/dnsproxy-*.zip"
+#          tags: true
+#          draft: false
 
 #  notify:
 #    needs:
