--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -49,9 +49,10 @@ jobs:
       - name: Prepare environment
         run: |-
           RELEASE_VERSION="${GITHUB_REF##*/}"
-          if [[ "${RELEASE_VERSION}" != "v*\.*\.*" ]]; then RELEASE_VERSION='dev'; fi
+          if [[ "${RELEASE_VERSION}" != v* ]]; then RELEASE_VERSION='dev'; fi
           echo "RELEASE_VERSION=\"${RELEASE_VERSION}\"" >> $GITHUB_ENV
           echo "${RELEASE_VERSION}"
+          echo "${GITHUB_REF##*/}"
 
       # Win
 #      - run: GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION} make release
