--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,12 +51,10 @@ jobs:
           RELEASE_VERSION="${GITHUB_REF##*/}"
           if [[ "${RELEASE_VERSION}" != v* ]]; then RELEASE_VERSION='dev'; fi
           echo "RELEASE_VERSION=\"${RELEASE_VERSION}\"" >> $GITHUB_ENV
-          echo "${RELEASE_VERSION}"
-          echo "${GITHUB_REF##*/}"
 
       # Win
-#      - run: GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION} make release
-#      - run: GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
+      - run: GOOS=windows GOARCH=386 VERSION=${RELEASE_VERSION} make release
+      - run: GOOS=windows GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
 
 #      # MacOS
 #      - run: GOOS=darwin GOARCH=amd64 VERSION=${RELEASE_VERSION} make release
